--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Khaled Shaker
-logo: /profile.png
+logo: /img/profile.png
 # description: Highly skilled and motivated Data Scientist with a strong background in leveraging Python,
 # SQL, and data warehousing to develop and maintain ETL & ELT pipelines. Experienced in utilizing Microsoft ETL tools
 # such as SSIS and SSAS to optimize data processing and analysis. Proficient in machine learning algorithms, including time series
@@ -7,5 +7,5 @@ logo: /profile.png
 # learning and professional development. Possesses an agile mindset, problem-solving abilities, and critical thinking skills honed through participatio
 # n in the McKinsey Forward program. Successfully led teams during college class projects and entrepreneurship workshops at ALX Founder Academy.
 # Passionate about solving real-world problems through data-driven approaches.
-# show_downloads: true
+show_downloads: true
 theme: jekyll-theme-minimal
